<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <EditText
        android:id="@+id/firstNameEdittxt"
        android:layout_width="167dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LastNameditText"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toEndOf="@+id/firstNameEdittxt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/firstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEdittxt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="68dp"
        android:text="@string/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastNameditText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:text="@string/dateOfBirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:entries="@array/monthArray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/DayeditText"
        android:layout_width="74dp"
        android:layout_height="43dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="Day"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toEndOf="@+id/spinnerMonth"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/YearEditText"
        android:layout_width="74dp"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Year"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/DayeditText"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/certificateTextView"
        android:layout_width="130dp"
        android:layout_height="34dp"
        android:layout_marginTop="60dp"
        android:text="@string/certificate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/DegreetextView"
        android:layout_width="132dp"
        android:layout_height="38dp"
        android:layout_marginTop="60dp"
        android:text="@string/twoYr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toEndOf="@+id/certificateTextView"
        app:layout_constraintTop_toBottomOf="@+id/YearEditText" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="379dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:textOff="@string/certificate"
        android:textOn="@string/twoYr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/certificateTextView"
        tools:checked="true" />

    <Spinner
        android:id="@+id/spinnerMajor"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:entries="@array/lstMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/spinnerCertificate"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Spinner
        android:id="@+id/spinnerCertificate"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:entries="@array/certificateArray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="115dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtcert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCertificate" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="137dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMajor" />

    <Button
        android:id="@+id/button"
        android:layout_width="102dp"
        android:layout_height="43dp"
        android:layout_marginTop="84dp"
        android:text="@string/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

</androidx.constraintlayout.widget.ConstraintLayout>